// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertContext should render alert 1`] = `
<div>
  <div
    id="alert-container"
  >
    <div
      class="alert alert-dismissible alert-danger"
    >
      <button
        class="close"
        type="button"
      >
        ×
      </button>
      Alert content
    </div>
  </div>
  <button>
    Set alert
  </button>
  <button>
    Dismiss alert
  </button>
</div>
`;

exports[`AlertContext should render component without alert 1`] = `
<div>
  <div
    id="alert-container"
  />
  <button>
    Set alert
  </button>
  <button>
    Dismiss alert
  </button>
</div>
`;
